crates/plotnik-tests/tests/04-emit/types/naming/error_definition_named_node.txt
Node = (program (expression_statement) @x)
------------------ DIAGNOSTICS -------------------
error: type name `Node` is already used for a different type
 --> query.ptk:1:1
  |
1 | Node = (program (expression_statement) @x)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: `Node` is the builtin node type name
